<resources>
    <string name="app_name">CashRegister</string>
    <string name="b1">1</string>
    <string name="b2">2</string>
    <string name="b3">3</string>
    <string name="b4">4</string>
    <string name="b5">5</string>
    <string name="b6">6</string>
    <string name="b7">7</string>
    <string name="b8">8</string>
    <string name="b9">9</string>
    <string name="b0">0</string>
    <string name="clear">C</string>
    <string name="buy_button">Buy</string>
    <string name="product_type">Product Type</string>
    <string name="product_name">Product Name</string>
    <string name="history">History</string>
    <string name="total_text">Total</string>
    <string name="quantity_text">Quantity</string>
    <string name="price_text">Price</string>
    <string name="manager">Manager</string>
    <string name="total">Total</string>
    <string name="date_text" />
    <string name="restock">Restock</string>
    <string name="view_history">View History</string>
    <string name="restock_items">Restock Items</string>
    <string name="back">Back</string>
    <string name="restock_item">Restock Item</string>
    <string name="enter_quantity">Enter quantity</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="product_label">Product: %1$s</string>
    <string name="quantity_label">Quantity: %1$d</string>
    <string name="total_label">Total: $%1$.2f</string>
    <string name="date_label">Date: %1$s</string>
    <string name="qty_label">Qty: %1$d</string>
    <string name="price_label">Price: $%1$.2f</string>
</resources>